drag and drop divs

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^32.0.2"
+  },
+  "dependencies": {
+    "interactjs": "^1.10.27"
   }
 }
