added dice rolling

--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
     }
   },
   "dependencies": {
+    "@3d-dice/dice-box": "^1.1.4",
+    "@3d-dice/dice-box-threejs": "^0.0.12",
     "@dnd-kit/core": "^6.1.0",
     "@electron/notarize": "^2.3.2",
     "electron-debug": "^3.2.0",
